--- a/PioneerModel/style.css
+++ b/PioneerModel/style.css
@@ -2,6 +2,35 @@ body {
   font: 10px sans-serif;
 }
 
+.outer {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+  width: 860px;
+}
+
+.state {
+    font: 30px sans-serif;
+    font-weight: bold;
+}
+
+.direction {
+    font: 20px sans-serif;
+    font-weight: bold;
+}
+
+
 .axis path,
 .axis line {
   fill: none;
