--- a/PioneerModel/interface/css/style.css
+++ b/PioneerModel/interface/css/style.css
@@ -1,10 +1,22 @@
-html, body { font: 10px sans-serif;}
+html, body {
+    height:100%;
+    width: 100%;
+    text-align:center;
+    padding: 0;
+    margin: 0;
+    font: 10px sans-serif;}
+
+.container {
+    width:95%;
+
+}
 
 .column {
     float: left;
     width: 100%;
     padding: 5px;
-    height: 100%; 
+    height: 100%;
+    text-align:left;
 }
 
 .row:after {
@@ -16,15 +28,37 @@ html, body { font: 10px sans-serif;}
 @media screen and (max-width: 1280px) {
     .column {
         width: auto%;
+	height: auto%;
     }
 }
 
 
 
 #indicator { background: #DDD; }
-#piechart { background: #AAA; }
-#map { background: #777; }
-#uncertainty { background: #444; }
+#piechart { background: #DDD; }
+#map { background: #DDD; }
+#uncertainty { background: #DDD; }
+
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; 
+    vertical-align: top;
+    overflow: hidden;
+}
+.svg-content-responsive {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+
+
+.bar {
+  fill: steelblue;
+}
 
 
 
@@ -117,4 +151,34 @@ html, body { font: 10px sans-serif;}
   top: 100%;
   left: 0;
 }
+
+rect:hover {
+      fill: orange;
+    }
+
+    #tooltip {
+      position: absolute;
+      width: 200px;
+      height: auto;
+      padding: 10px;
+      background-color: white;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      pointer-events: none;
+    }
+
+    #tooltip.hidden {
+      display: none;
+    }
+
+    #tooltip p {
+      margin: 0;
+      font-family: Futura;
+      font-size: 16px;
+      line-height: 20px;
+    }
 
